tests/baselines/reference/enumExtend.errors.txt
tests/cases/compiler/enumExtend.ts(13,14): error TS2339: Property 'a' does not exist on type 'typeof B'.
tests/cases/compiler/enumExtend.ts(14,14): error TS2339: Property 'b' does not exist on type 'typeof B'.
tests/cases/compiler/enumExtend.ts(15,14): error TS2339: Property 'c' does not exist on type 'typeof B'.


==== tests/cases/compiler/enumExtend.ts (3 errors) ====
    enum A {
        a, b, c
    }
    
    enum B {
        ...A,
        d, e, f
    }
    
    const Aa = A.a;
    const Ab = A.b;
    const Ac = A.c;
    const Ba = B.a;
                 ~
!!! error TS2339: Property 'a' does not exist on type 'typeof B'.
    const Bb = B.b;
                 ~
!!! error TS2339: Property 'b' does not exist on type 'typeof B'.
    const Bc = B.c;
                 ~
!!! error TS2339: Property 'c' does not exist on type 'typeof B'.
    const Bd = B.d;
    const Be = B.e;
    const Bf = B.f;
    